<resources>
    <string name="app_name">Nail The Deadline</string>
    <!--New Task Activity-->
    <string name="task_name_text">Task Name</string>
    <string name="due_text">Due</string>
    <string name="pick_date_btn">Set Date</string>
    <string name="pick_time_btn">Set Time</string>
    <string name="create_task_btn">Create Task</string>
    <string name="cancel_btn">Cancel</string>
    <string name="pick_date_text">Please pick date</string>
    <string name="pick_time_text">Please pick time</string>
    <!--Main Activity-->
    <string name="new_task_btn">New Task</string>
    <string name="ongoing_tasks_btn">Ongoing Tasks</string>
    <string name="history_btn">History</string>
    <string name="cats_btn">My Cats</string>
    <string name="no_tasks_text">You don\'t have any ongoing tasks.\n\n
        Let\'s start with creating a new task!!</string>
    <!--Task Display Activity-->
    <string name="start_task_btn">Start Working</string>
    <string name="stop_task_btn">Stop</string>
    <!--History Activity-->
    <string name="no_history_text">You don\'t have any history yet.\n\n
        Let\'s start with creating a new task!!</string>
    <!--Cats Activity-->
    <string name="no_cats_text">You don\'t have any cats yet.\n\n
        Let\'s start with creating a new task!!</string>
    <!--Menu-->
    <string name="acknowledge">Acknowledgement</string>
    <string name="help">Help</string>
    <string name="to_graders">To Graders</string>
    <string name="ok_label">OK</string>
    <string name="help_msg">\
        Nail the Deadline helps you focus on what is important and keeps you away from your phone.
        \n\
        You can earn a cat by simply setting yourself a task and focusing on it! Whether you will get a cat
        depends on how much time you spent on your task. The longer you focus on the task, the
        higher probability you will get a cat. <b>There are 12 cat species.</b> Some of them are very
        rare and you must spend long enough time on your task to get them. (Gotta catch\'em all!!)
        \n\
        <b>Some tips:</b> if the total time you spend on the task is less than 1 hour, you will not get
        a cat (Oops!). The total time is accumulated until the deadline has come.
        \n\
        When you\'re focusing on the app, we expect you not to use other apps. If you start using
        other apps, the stopwatch will stop automatically. Also, we\'re detecting the location
        in the meanwhile. If you move too far, we will stop counting as well.
    </string>
    <string name="acknowledgement_msg">\
        Cat images: http://qiao88.com/show/3508115.html
    </string>
    <string name="to_graders_msg">\
        This app requires long time (> 60min) to see all functions. For example, users will get
        notification when they focus on the task for an hour, the purpose of which is to remind
        them to take a break. Also, the cat collection depends on the time spent, you will need
        to spend a lot of time (~ 10 hr) to get rare cats.
        \n\
        <b>Attention</b>: For testing purpose, I have intentionally set <b>1 second to 10 minutes</b>,
        <b>6 seconds to 1 hour</b>, so that you will be able to get notification when you spend 10s on the task.
    </string>
</resources>
